align button and fix broken css

--- a/src/components/SpendingPeriod/SpendingPeriod.css
+++ b/src/components/SpendingPeriod/SpendingPeriod.css
@@ -1,10 +1,10 @@
-.PeriodContainer {
+.SpendPeriodContainer {
     width: 100%;
     display: flex;
     justify-content: space-between;
   }
   
-  .PeriodButtonsSection {
+  .SpendPeriodButtonsSection {
     display: grid;
     grid-auto-flow: column;
     grid-auto-columns: max-content;
@@ -28,11 +28,10 @@
     background-color: #f7b21f;
   }
   
-  .DateInputsSection {
+  .SpendDateInputsSection {
     position: relative;
     display: flex;
     flex-direction: column;
-    gap: .5rem;
     width: 80%;
     justify-self: center;
   }
@@ -40,26 +39,27 @@
   .PeriodButtonCustom {
     width: 5rem;
   }
-  .Button{
+  .SpendButton{
       justify-self: center;
+      height: 1.5rem;
+      width: 80%;
   }
   
-  .CalendarModal {
+  .SpendCalendarModal {
     position: absolute;
     background-color: #ffffff;
     border: 1px solid #cccccc;
     display: grid;
     gap: 1rem;
-    padding: 1rem .5rem;
+    padding: .7rem .1rem;
     top: 3rem;
-    right: -18rem;
+    right: -2rem;
     z-index: 3;
-    width: 20rem;
+    width: 19rem;
   }
   
-.SelectDate{
+.SpendSelectDate{
    display: grid;
    grid-template-columns: 1fr 3fr;
-   padding: .2rem;
-   gap: .2rem;
+   padding: .1rem;
 }
